[package]
name = "adventofcode"
version = "0.3.0"
edition = "2021"
default-run = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2018"
path = "src/aoc2018/main.rs"

[[bin]]
name = "2019"
path = "src/aoc2019/main.rs"

[[bin]]
name = "2020"
path = "src/aoc2020/main.rs"

[[bin]]
name = "2021"
path = "src/aoc2021/main.rs"

[[bin]]
name = "2022"
path = "src/aoc2022/main.rs"

[dependencies]
arrayvec = "0.7"
ahash = "0.8"
rayon = "1"
nom = "7"
paste = "1"

[profile.release]
strip = true
lto = true
panic = 'abort'
